Signed-off-by: Scott Woodrum <Scott's Dell i5@MININT-HGRU73E.(none)>

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This will be the repository for the hexed-bot driver.
+This is the repository for the hexed-bot driver. Hexed-bot is my first take on an autonomous hexapod robot.
